# swing-station

./: README.md  pyproject.toml
src/: app_mkt_db.py  conf.py  exceptions.py  job_compute_makret_dashboard.py  job_ingest_nse_industry.py  job_ingest_ohlcv.py
src/brokers/: exceptions.py
src/compute/: breadth.py  compute.py  filter.py  indicator.py  scanner.py
src/config/: base.py
src/config/brokers/: kite.py
src/config/compute/: __init__.py  breadth.py  compute.py
src/config/website/: nse.py
src/ingest/: __init__.py  ingest.py
src/mkt_db_app/modules/: breadth.py  overview.py  scanner.py
src/mkt_db_app/services/: data_loader.py
src/website/nse/: indices.py  industry.py
