[project]
name = "swing-station"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "isort>=8.0.1",
    "kiteconnect>=5.2.0",
    "pandas>=3.0.3",
    "polars>=1.41.2",
    "pyotp>=2.9.0",
    "ratelimit>=2.2.1",
    "selenium>=4.44.0",
    "sqlalchemy>=2.0.50",
]
